syntax = "proto3";

package org.xrpl.rpc.v1;

import "org/xrpl/rpc/v1/fields.proto";
import "org/xrpl/rpc/v1/ledger_objects.proto";

message AccountSet
{
    ClearFlag clear_flag = 1;

    Domain domain = 2;

    EmailHash email_hash = 3;

    MessageKey message_key = 4;

    SetFlag set_flag = 5;

    TransferRate transfer_rate = 6;

    TickSize tick_size = 7;
}

message AccountDelete
{
   Destination destination = 1;

   DestinationTag destination_tag = 2;
}

message CheckCancel
{
    CheckID check_id = 1;
}

message CheckCash
{
    CheckID check_id = 1;

    oneof amount_oneof
    {
        Amount amount = 2;

        DeliverMin deliver_min = 3;
    }
}

message CheckCreate
{
    Destination destination = 1;

    SendMax send_max = 2;

    DestinationTag destination_tag = 3;

    Expiration expiration = 4;

    InvoiceID invoice_id = 5;
}

message DepositPreauth
{
    oneof authorization_oneof
    {
        Authorize authorize = 1;

        Unauthorize unauthorize = 2;
    }
}

message EscrowCancel
{
    Owner owner = 1;

    OfferSequence offer_sequence = 2;
}

message EscrowCreate
{
    Amount amount = 1;

    Destination destination = 2;

    CancelAfter cancel_after = 3;

    FinishAfter finish_after = 4;

    Condition condition = 5;

    DestinationTag destination_tag = 6;
}

message EscrowFinish
{
    Owner owner = 1;

    OfferSequence offer_sequence = 2;

    Condition condition = 3;

    Fulfillment fulfillment = 4;
}

message OfferCancel
{
   OfferSequence offer_sequence = 1;
}

message OfferCreate
{
    Expiration expiration = 1;

    OfferSequence offer_sequence = 2;

    TakerGets taker_gets = 3;

    TakerPays taker_pays = 4;
}

message PaymentChannelClaim
{
    Channel channel = 1;

    Balance balance = 2;

    Amount amount = 3;

    Signature signature = 4;

    PublicKey public_key = 5;
}

message PaymentChannelCreate
{
    Amount amount = 1;

    Destination destination = 2;

    SettleDelay settle_delay = 3;

    PublicKey public_key = 4;

    CancelAfter cancel_after = 5;

    DestinationTag destination_tag = 6;
}

message PaymentChannelFund
{
    Channel channel = 1;

    Amount amount = 2;

    Expiration expiration = 3;
}

message SetRegularKey
{
    RegularKey regular_key = 1;
}

message SignerListSet
{
   SignerQuorum signer_quorum = 1;

   repeated SignerEntry signer_entries = 2;
}

message TrustSet
{
    LimitAmount limit_amount = 1;

    QualityIn quality_in = 2;

    QualityOut quality_out = 3;
}
