syntax = "proto3";

package rpc.v1;

import "rpc/v1/amount.proto";

message Payment {
    // The amount of currency to pay, in either issued currency or XRP.
    CurrencyAmount amount = 1;

    // The destination of the payment.
    AccountAddress destination = 2;

    uint32 destination_tag = 3;

    // 32 bytes
    bytes invoice_id = 4;

    repeated Path paths = 5;

    CurrencyAmount send_max = 6;

    CurrencyAmount deliver_min = 7;
}

message Path {

    repeated PathElement elements = 1;
}

message PathElement {

    AccountAddress account = 1;

    Currency currency = 2;

    AccountAddress issuer = 3;
}
